<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_meeting_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        tools:context=".ui.meeting_list.AddMeetingActivity">


        <ImageButton
            android:id="@+id/add_color"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/ic_lens"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spinner_location"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_color" />

        <EditText
            android:id="@+id/select_date"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_location" />

        <Button
            android:id="@+id/button_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select date"
            app:layout_constraintBottom_toBottomOf="@id/select_date"
            app:layout_constraintStart_toEndOf="@id/select_date" />

        <EditText
            android:id="@+id/select_hour"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_date" />

        <Button
            android:id="@+id/button_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Select hour"
            app:layout_constraintBottom_toBottomOf="@+id/select_hour"
            app:layout_constraintStart_toEndOf="@id/select_hour" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_subject"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Subject"
            android:maxLength="25"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/select_hour"
            app:layout_constraintTop_toBottomOf="@+id/select_hour" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_add_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="Participants to adding"
            app:boxBackgroundColor="@color/design_default_color_backgroundy"
            app:hintAnimationEnabled="false"
            android:inputType="textEmailAddress"
            app:counterMaxLength="15"
            app:layout_constraintStart_toStartOf="@id/add_subject"
            app:layout_constraintTop_toBottomOf="@+id/add_subject">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_participants"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:enabled="true"/>
    </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/input_layout_add_participants"
            app:layout_constraintStart_toEndOf="@id/input_layout_add_participants"
            android:text="Add"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/input_layout_add_participants"
            app:layout_constraintStart_toStartOf="parent"
            app:boxBackgroundColor="@color/design_default_color_backgroundy"
            android:hint="Participants"
            app:hintAnimationEnabled="false"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/participants"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:enabled="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:enabled="false"
            android:gravity="center"
            android:padding="30dp"
            android:text="save"
            android:theme="@style/Theme.MyApp"
            app:cornerRadius="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_participants" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


