<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/alert_dialog"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Spinner
        android:id="@+id/spinner_location_dialog"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:scrollbarSize="30dp"/>

    <EditText
        android:id="@+id/editDate_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/spinner_location_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        android:textSize="30sp"
        android:hint="Choose date"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="100dp" />

    <Button
        android:id="@+id/dateButton_dialog"
        android:layout_width="95dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toEndOf="@+id/editDate_dialog"
        app:layout_constraintTop_toTopOf="@+id/editDate_dialog"
        app:layout_constraintTop_toBottomOf="@+id/editDate_dialog"
        android:text="Choose"/>


</androidx.constraintlayout.widget.ConstraintLayout>