<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/location_filter"
        android:orderInCategory="1"
        android:icon="@drawable/ic_filter"
        android:title="@string/action_location_sort"
        app:showAsAction="ifRoom"/>



</menu>